<resources>
    <string name="app_name">CafeCanter</string>
    <string name="user_name">User Name</string>
    <string name="_91_1234567890">+91 1234567890</string>
    <string name="user_name_gmail_com">user_name@gmail.com</string>
    <string name="dots">..................</string>
    <string name="register">register</string>
    <string name="or_with">Or with</string>
    <string name="login">login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="password">..............</string>
    <string name="number">+91 1234567890</string>
    <string name="mail">yourEmail01@gmail.com</string>
    <string name="upload_image">Upload Image</string>
    <string name="UserName">User Name</string>
    <string name="OrWith">Or With</string>
    <string name="cafe_center">Cafe Center</string>
    <string name="skip">Skip</string>
    <string name="ignore">ignore</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>