<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="10dp"
    tools:context=".SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:backgroundTint="#ECAF8B"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icon2"
                    android:contentDescription="@string/ignore" />

                <TextView
                    android:id="@+id/cafehouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/cafe_center"
                    android:textColor="#DDCD5E"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/backgroundeditview"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/user_name"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:autofillHints="ignore" />


                    <EditText
                        android:id="@+id/editTextTextEmailAddress2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/backgroundeditview"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/mail"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:autofillHints="ignore" />

                    <EditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/backgroundeditview"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textStyle="normal"
                        android:autofillHints="ignore" />

                    <Button
                        android:id="@+id/btnSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/btn_gradient"
                        android:text="@string/sign_in" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/view2"
                            android:layout_width="40dp"
                            android:layout_height="2dp"
                            android:layout_marginStart="60dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@color/black"
                            android:backgroundTint="@color/black" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/or_with"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="normal" />

                        <View
                            android:id="@+id/view3"
                            android:layout_width="40dp"
                            android:layout_height="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="60dp"
                            android:layout_weight="1"
                            android:background="@color/black"
                            android:backgroundTint="@color/black" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnFacebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/fbbtn"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/facebook"
                        android:textColor="#FFFDFD"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/facebook" />

                    <TextView
                        android:id="@+id/btnGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/googlebtn"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/google"
                        android:textColor="#FFFDFD"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/google" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:gravity="center"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/registerIntent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textColor="#3F51B5" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
