<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="10dp"
    tools:context=".SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/userimage"
                    app:civ_border_color="#EF7C58"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/upload_image"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view"
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:backgroundTint="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:autofillHints=""
                        android:background="@drawable/backgroundeditview"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/UserName"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/backgroundeditview"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/number"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:minHeight="48dp"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:autofillHints=""
                        android:background="@drawable/backgroundeditview"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/mail"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/editTextTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/backgroundeditview"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:padding="10dp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnragister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/btn_gradient"
                        android:text="@string/register" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <View
                            android:id="@+id/view2"
                            android:layout_width="40dp"
                            android:layout_height="2dp"
                            android:layout_marginStart="60dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@color/black"
                            android:backgroundTint="@color/black" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/OrWith"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="normal" />

                        <View
                            android:id="@+id/view3"
                            android:layout_width="40dp"
                            android:layout_height="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="60dp"
                            android:layout_weight="1"
                            android:background="@color/black"
                            android:backgroundTint="@color/black" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/fbbtn"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/facebook"
                        android:textColor="#FFFDFD"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/facebook" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/googlebtn"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/google"
                        android:textColor="#FFFDFD"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/google" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:gravity="center"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/loginIntent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="#3F51B5" />
                </LinearLayout>
            </LinearLayout>

    </ScrollView>

</LinearLayout>
